# github_actions_simple_demo

./: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: github_actions.md  pre_commit.md  testing_strategy.md
src/csv_inspector/: __init__.py  analyzer.py  schema.py
tests/: __init__.py  test_analyzer.py  test_schema.py
